--- a/default/savedsearches.conf
+++ b/default/savedsearches.conf
@@ -23,70 +23,68 @@ dispatch.latest_time = now
 enableSched = 1
 quantity = 0
 relation = greater than
-search = | tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Alerts BY Alerts.app \
+search = | tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Alerts BY Alerts.app \
 | rename Alerts.app AS field_value \
-| eval model="Alerts" \
+| eval datamodel="Alerts" \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Authentication BY Authentication.app \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Authentication BY Authentication.app \
     | rename Authentication.app AS field_value \
-    | eval model="Authentication" ] \
+    | eval datamodel="Authentication" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Change BY All_Changes.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Change BY All_Changes.vendor_product \
     | rename All_Changes.vendor_product AS field_value \
-    | eval model="Change" ] \
+    | eval datamodel="Change" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Email BY All_Email.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Email BY All_Email.vendor_product \
     | rename All_Email.vendor_product AS field_value \
-    | eval model="Email" ] \
+    | eval datamodel="Email" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=JVM BY JVM.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=JVM BY JVM.vendor_product \
     | rename JVM.vendor_product AS field_value \
-    | eval model="JVM" ] \
+    | eval datamodel="JVM" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Malware BY Malware_Operations.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Malware BY Malware_Operations.vendor_product \
     | rename Malware_Operations.vendor_product AS field_value \
-    | eval model="Malware" ] \
+    | eval datamodel="Malware" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Network_Resolution BY DNS.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Network_Resolution BY DNS.vendor_product \
     | rename DNS.vendor_product AS field_value \
-    | eval model="Network Resolution" ] \
+    | eval datamodel="Network Resolution" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Network_Sessions BY All_Sessions.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Network_Sessions BY All_Sessions.vendor_product \
     | rename All_Sessions.vendor_product AS field_value \
-    | eval model="Network Sessions" ] \
+    | eval datamodel="Network Sessions" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Network_Traffic WHERE earliest=-1d BY All_Traffic.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Network_Traffic WHERE earliest=-1d BY All_Traffic.vendor_product \
     | rename All_Traffic.vendor_product AS field_value \
-    | eval model="Network Traffic" ] \
+    | eval datamodel="Network Traffic" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Updates BY Updates.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Updates BY Updates.vendor_product \
     | rename Updates.vendor_product AS field_value \
-    | eval model="Updates" ] \
+    | eval datamodel="Updates" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Vulnerabilities BY Vulnerabilities.vendor_product \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Vulnerabilities BY Vulnerabilities.vendor_product \
     | rename Vulnerabilities.vendor_product AS field_value \
-    | eval model="Vulnerabilities" ] \
+    | eval datamodel="Vulnerabilities" ] \
 | append \
-    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) FROM datamodel=Web BY Web.app \
+    [| tstats summariesonly=true, allow_old_summaries=true latest(_time) AS lastTime FROM datamodel=Web BY Web.app \
     | rename Web.app AS field_value \
-    | eval model="Web" ] \
-| typer \
-| stats max(lastTime) as lastTime list(eventtype) as eventtype by datamodel, key_value \
-| lookup sourcetype_monitor datamodel,key_value OUTPUT \
+    | eval datamodel="Web" ] \
+| stats max(lastTime) as lastTime by datamodel, field_value \
+| lookup datamodel_monitor datamodel,field_value OUTPUT \
 | search comments=* \
-| eval to=if(contact="",null(),contact) \
-| eval lateSecs=mvindex(lateSecs,0) \
-| eval lateSecs=if(suppressUntil > now(),0,lateSecs) \
-| eval lastAllowed=round(coalesce(relative_time(now(), lateSecs),now()-lateSecs),0) \
-| where lateSecs != "0" AND (lastTime < lastAllowed) \
+| eval to=contact \
+| eval late_seconds=mvindex(late_seconds,0) \
+| eval lastAllowed=round(coalesce(relative_time(now(), late_seconds),now()-late_seconds),0) \
+| where late_seconds != "0" AND (lastTime < lastAllowed) \
 | eval howLateSecs=now() - lastTime \
 | eval howLate=if(howLateSecs<0,"-".tostring(abs(howLateSecs),"duration"),tostring(howLateSecs,"duration")) \
 | rex field=howLate mode=sed "s/\+/ days /" \
 | rex field=howLate mode=sed "s/^1 days/1 day /" \
 | sort lastTime \
 | eval Last=strftime(lastTime, "%D %H:%M:%S") \
-| eval message="| ".datamodel." | ".key_value." | ".Last." | ".howLate." |" \
-| eval suppressfield=datatmodel.", ".key_value \
+| eval message="| ".datamodel." | ".field_value." | ".Last." | ".howLate." |" \
+| eval suppressfield=datamodel.", ".field_value \
 | stats list(message) as body, list(suppressfield) as suppressfield by to \
 | eval body=mvappend("| :---: | :--------: | :-------------: | :-------------------: |",body) \
-| eval body=mvappend("| Datamodel | Key Value | Last Event Time | Time Since Last Event |",body)
+| eval body=mvappend("| Datamodel | Key Field Value | Last Event Time | Time Since Last Event |",body)
