rm Azure DevOps; add GitHub Actions

--- a/default/app.conf
+++ b/default/app.conf
@@ -8,7 +8,7 @@ label = Datamodel Monitor
 [launcher]
 author = Tim Riddell
 description = Alert on late events by datamodel and key field
-version = $VERSION
+version = VERSION
 
 [package]
 id = datamodel_monitor
